# cloudly

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
cloudly/config/: client.py
cloudly/http/: __init__.py  auth.py  context.py  decorators.py  exceptions.py  request.py  response.py  security.py  validators.py
cloudly/http/v2/: api.py  decorators.py  generic.py  schema.py
cloudly/logging/: logger.py
cloudly/streams/: common.py
lambda_tools/db/: dynamodb.py
lambda_tools/http/: request.py  validators.py
tests/: test_authorization_decorator.py  test_http_api.py  test_logger.py  test_query_command.py  test_update_command.py  test_validator.py
tests/v2/: test_http_api.py  test_middleware.py  test_schema.py
