[tool.poetry]
name = "cloudly"
version = "1.3.8"
description = ""
authors = ["Nana Duah <gabano2005@gmail.com>"]
readme = "README.md"
packages = [{include = "cloudly"}]

[tool.poetry.dependencies]
python = ">=3.9 <4.0"
flowfast = {git = "https://github.com/nanaduah1/flowfast.git", rev = "0.0.5"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
